objects/Object2__c.object
<CustomObject>
    <fields>
        <fullName>After_baseline__c</fullName>
        <label>After baseline</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Three__c</fullName>
        <label>Three</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Oct4</label>
    <nameField>
        <label>Oct4 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Oct4s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>